Added "profil-firme-nepotpun" page, fixed js calls when graph not present.

--- a/registar-profil-firme-nepotpun.html
+++ b/registar-profil-firme-nepotpun.html
@@ -322,26 +322,14 @@
             <div class="wrapper-vijesti remargin">
                 <div class="col-md-3 col-lg-2 profil-sidebar-lijevi nopadding">
 
-                    <div class="col-sm-12 col-md-12 card card-vijest ">
-                        <div class="profil-card">
-                            <img class=" img img-responsive " src="http://placehold.it/150x150 ">
-                        </div>
-                    </div>
+
                     <div class="col-sm-12 col-md-12 card card-vijest ">
                         <div class="profil-card opcije">
                             <li><a href="#" data-target="tab-osnovno" class="active">Osnovni Profil firme</a></li>
                             <li><a href="#">Opis djelatnosti</a></li>
                             <li><a href="#">OSNOVNI PODACI</a></li>
                             <li><a href="#">Stanje računa</a></li>
-                            <li><a href="#">Drugi kontakti</a></li>
-                            <li><a href="#">KATALOG ROBA I USLUGA</a></li>
-                            <li><a href="#" data-target="tab-tendera">TENDERI</a></li>
-                            <li><a href="#">POBJEDE NA TEDERIMA</a></li>
-                            <li><a href="#">UČEŠCE NA TENDERIMA</a></li>
-                            <li><a href="#">ISPORUČIOCI</a></li>
-                            <li><a href="#">POVEZANE LIČNOSTI</a></li>
-                            <li><a href="#">POVEZANE FIRME</a></li>
-                            <li><a href="#">menadžerske pozicije </a></li>
+
                             <button type="submit" class="btn btn-filter-refresh">Prijavi grešku</button>
                         </div>
                     </div>
@@ -350,33 +338,26 @@
                 <div class="col-md-6 col-lg-6 profil-centar nopadding">
                     <div class="col-xs-12 card card-vijest tab-podaci">
                         <div class="profil-card">
-                            <h1 class="card-naslov-vijesti">KONZUM d.o.o. Sarajevo </h1>
+                            <h1 class="card-naslov-vijesti">ZIDAR VLASNIK GUTA ŠEMSO SAMOSTALNI OBRT Sarajevo </h1>
                             <a href="# " class="star "><i class="fa fa-star "></i></a>
                             <table class="tabela-ofirmi ">
                                 <tr>
                                     <td>NAZIV</td>
-                                    <td>Konzum trgovina na veliko i malo d.o.o. Sarajevo</td>
+                                    <td>ZIDAR VLASNIK GUTA ŠEMSO SAMOSTALNI OBRT Sarajevo</td>
                                 </tr>
                                 <tr>
                                     <td>ADRESA</td>
-                                    <td>Rajlovačka bb</td>
+                                    <td>Brusulje 65 Sarajevo</td>
                                 </tr>
                                 <tr>
                                     <td>MJESTO</td>
                                     <td>71000 Sarajevo</td>
                                 </tr>
-                                <tr>
-                                    <td>WEB</td>
-                                    <td>
-                                        <a href="http://www.konzum.ba " target="_blank ">www.konzum.ba</a>
-                                        <a href="# "><i class="fa fa-twitter " aria-hidden="true "></i></a>
-                                        <a href="# "><i class="fa fa-facebook " aria-hidden="true "></i></a>
-                                    </td>
-                                </tr>
+
                             </table>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-4 card podaci-o-firmi broj-zaposlenih tab-osnovno">
+                    <!--    <div class="col-sm-12 col-md-4 card podaci-o-firmi broj-zaposlenih tab-osnovno">
                         <div class="profil-card ">
                             <p class="broj-radnika plavi ">4380</p>
                             <p class="broj-radnika label-zaposlenih ">zaposlenih<br>radnika</p>
@@ -394,91 +375,30 @@
                             <h1 class="odgovorno-lice plavi ">David Dolinar</h1>
                             <p class="pozicija-odgovornog-lica ">direktor</p>
                         </div>
+                    </div> -->
+                    <div class="col-sm-12 col-md-8 card podaci-o-firmi pravne-info djelatnost tab-osnovno">
+                        <div class="profil-card ">
+                            <h1 class="card-naslov-vijesti" style="color: #999;">Djelatnost</h1>
+                            <table class="tabela-ofirmi ">
+                                <tr>
+                                    <td>45.410</td>
+                                    <td>Fasadni i štukaturni radovi </td>
+                                </tr>
+
+                            </table>
+                        </div>
                     </div>
                     <div class="col-sm-12 col-md-4 card podaci-o-firmi bank-racuni tab-osnovno">
                         <div class="profil-card ">
                             <p class="label-racuni ">bankovni računi</p>
                             <hr>
-                            <p class="label-racuni brojke "><span class="plavi ">15</span> / <span class="crveni ">0</span></p>
+                            <p class="label-racuni brojke "><span class="plavi ">1</span> / <span class="crveni ">0</span></p>
                             <hr>
                             <p class="label-racuni opisi "><span class="plavi ">aktivni</span> / <span class="crveni ">blokirani</span></p>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-12 card podaci-o-firmi pravne-info djelatnost tab-osnovno">
-                        <div class="profil-card ">
-                            <h1 class="card-naslov-vijesti" style="color: #999;">Djelatnost</h1>
-                            <table class="tabela-ofirmi ">
-                                <tr>
-                                    <td>46.39</td>
-                                    <td>Nespecijalizirana trgovina na veliko hranom, pićima i duhanskim proizvodima</td>
-                                </tr>
-                                <tr>
-                                    <td>51.170</td>
-                                    <td>Posredovanje u trgovini hranom, pićem i duhanom</td>
-                                </tr>
-                                <tr>
-                                    <td>51.390</td>
-                                    <td>Nespecijalizirana trgovina na veliko hranom, pićima i duhanom</td>
-                                </tr>
-                                <tr>
-                                    <td>52.110</td>
-                                    <td>Trgovina na malo u nespecijaliziranim </td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-12 card podaci-o-firmi pravne-info djelatnost tab-tendera">
-                        <div class="profil-card ">
-                            <h1 class="card-naslov-vijesti plavi">Objavljeni tenderi</h1>
-                            <div class="col-xs-12 nopadding">
-                                <li>
-                                    <p class="card-kategorija tender-lista tender-lista-datum">28.10.2016.</p>
-                                    <p class="card-kategorija tender-lista sa-datumima">Izvođenje radova na rekonstrukciji ograde objekta ATC Rakovica </p>
-                                    <p class="card-kategorija tender-lista tender-lista-datum-vazenja">(važi do 17.11.2016.)</p>
-                                </li>
-                                <li>
-                                    <p class="card-kategorija tender-lista tender-lista-datum">28.10.2016.</p>
-                                    <p class="card-kategorija tender-lista sa-datumima">Izvođenje radova na adaptaciji prostora za smještaj TK opreme RSU 2 Koševsko Brdo u naselju Ciglane, Sarajevo</p>
-                                    <p class="card-kategorija tender-lista tender-lista-datum-vazenja">(važi do 17.11.2016.)</p>
-                                </li>
-                                <li>
-                                    <p class="card-kategorija tender-lista tender-lista-datum">28.10.2016.</p>
-                                    <p class="card-kategorija tender-lista sa-datumima">Nabavka kancelarijskog materijala, sitnog inventara i kancelarijskog papira</p>
-                                    <p class="card-kategorija tender-lista tender-lista-datum-vazenja">(važi do 17.11.2016.)</p>
-                                </li>
-                                <li>
-                                    <p class="card-kategorija tender-lista tender-lista-datum">28.10.2016.</p>
-                                    <p class="card-kategorija tender-lista sa-datumima">Javni poziv ovlaštenim distributerima mobilnih uređaja proizvođača CAT i SONY </p>
-                                    <p class="card-kategorija tender-lista tender-lista-datum-vazenja">(važi do 17.11.2016.)</p>
-                                </li>
-                                <li>
-                                    <p class="card-kategorija tender-lista tender-lista-datum">28.10.2016.</p>
-                                    <p class="card-kategorija tender-lista sa-datumima">Izvođenje radova na adaptaciji i opremanju prostora za Telecom Centar Travnik II u Travniku </p>
-                                    <p class="card-kategorija tender-lista tender-lista-datum-vazenja">(važi do 17.11.2016.)</p>
-                                </li>
-                                <li>
-                                    <p class="card-kategorija tender-lista tender-lista-datum">28.10.2016.</p>
-                                    <p class="card-kategorija tender-lista sa-datumima">Nabavka SAP test data migration servera </p>
-                                    <p class="card-kategorija tender-lista tender-lista-datum-vazenja">(važi do 17.11.2016.)</p>
-                                </li>
-                                <li>
-                                    <p class="card-kategorija tender-lista tender-lista-datum">28.10.2016.</p>
-                                    <p class="card-kategorija tender-lista sa-datumima">Nabavka usluga osiguranja motornih i priključnih vozila Dioničkog društva BH Telecom Sarajevo, za period 01.01.2017.-31.12.2017. godine </p>
-                                    <p class="card-kategorija tender-lista tender-lista-datum-vazenja">(važi do 17.11.2016.)</p>
-                                </li>
-                                <li>
-                                    <p class="card-kategorija tender-lista tender-lista-datum">28.10.2016.</p>
-                                    <p class="card-kategorija tender-lista sa-datumima">Nabavka rezervnih jedinica RR sistema proizvođača CERAGON </p>
-                                    <p class="card-kategorija tender-lista tender-lista-datum-vazenja">(važi do 17.11.2016.)</p>
-                                </li>
-                                <li>
-                                    <p class="card-kategorija tender-lista tender-lista-datum">28.10.2016.</p>
-                                    <p class="card-kategorija tender-lista sa-datumima">(produženje roka) Nabavka usluga osiguranja imovine društva </p>
-                                    <p class="card-kategorija tender-lista tender-lista-datum-vazenja">(važi do 17.11.2016.)</p>
-                                </li>
-                            </div>
-                        </div>
-                    </div>
+
+
                 </div>
                 <div class="col-md-3 col-lg-4 profil-sidebar-desni nopadding">
 
@@ -486,37 +406,23 @@
                         <div class="profil-card">
                             <h1 class="card-naslov-vijesti">Pravne informacije </h1>
                             <table class="tabela-ofirmi ">
-                                <tr>
-                                    <td>Oblik svojine</td>
-                                    <td>Privatna</td>
-                                </tr>
-                                <tr>
-                                    <td>Vlasnička strukura</td>
-                                    <td>100% Konzum d.d. Zagreb</td>
-                                </tr>
+
                                 <tr>
                                     <td>ID broj</td>
                                     <td>1234567890</td>
                                 </tr>
-                                <tr>
-                                    <td>PDV broj</td>
-                                    <td>1234567890</td>
-                                </tr>
-                                <tr>
-                                    <td>Datum osnivanja</td>
-                                    <td>12.12.2000.</td>
-                                </tr>
+
 
                             </table>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-12 card card-vijest ">
+                    <!--   <div class="col-sm-12 col-md-12 card card-vijest ">
                         <div class="profil-card">
 
                             <h1 class="card-naslov-vijesti ">Sveobuhvatna dobit</h1>
                             <div id="line-chart"></div>
                         </div>
-                    </div>
+                    </div>-->
 
                     <div class="col-sm-12 col-md-12 card card-vijest ">
                         <div class="profil-card">
@@ -526,6 +432,7 @@
                                 width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
                         </div>
                     </div>
+                    <!--
                     <div class="col-sm-12 col-md-12 card card-vijest ">
                         <div class="profil-card">
                             <h1 class="card-naslov-vijesti ">Povezana društva</h1>
@@ -535,8 +442,9 @@
                             </ul>
                         </div>
                     </div>
-
+                         -->
                 </div>
+
                 <div class="col-xs-12 col-sm-12 col-md-12 ">
                     <div id="profil-firme-tabs" class="tabs_module registar-vijesti-widget ">
                         <ul class="nav nav-justified nav-pills tabs ">
@@ -1028,7 +936,11 @@
                 colors: ['white']
             };
         config.element = 'line-chart';
-        Morris.Line(config);
+        var elementPrikaza = $("#" + config.element);
+        if (elementPrikaza.length > 0) {
+            console.log("Dijaram će biti prikazan u elementu :" + elementPrikaza);
+            Morris.Line(config);
+        }
     </script>
 
 </body>
