--- a/promo.html
+++ b/promo.html
@@ -50,10 +50,10 @@
         </div>
         <nav class="hidden-xs visible-md visible-lg upper_menu">
             <ul>
-                <li><a href="#" class="um_vijesti active">VIJESTI</a></li>
+                <li><a href="#" class="um_vijesti ">VIJESTI</a></li>
                 <li><a href="#" class="um_registar">REGISTAR</a></li>
                 <li><a href="#" class="um_tenderi">TENDERI</a></li>
-                <li><a href="#" class="um_promo">PROMO</a></li>
+                <li><a href="#" class="um_promo active">PROMO</a></li>
                 <li><a href="#" class="um_forum">FORUM</a></li>
 
             </ul>
@@ -65,7 +65,7 @@
                 <div class="navbar-header">
                     <a class="logo-link" href="#"><img class="logo" src="./images/logo.png" alt="logo"></a>
                 </div>
-                <h1 id="current_category" class="visible-xs-inline-block visible-sm-inline-block hidden-md hidden-lg vijesti">VIJESTI</h1>
+                <h1 id="current_category" class="visible-xs-inline-block visible-sm-inline-block hidden-md hidden-lg promo">PROMO</h1>
                 <div id="header_navigation" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav hidden-xs visible-md visible-lg">
                         <li><a href="#">O nama</a></li>
@@ -114,17 +114,9 @@
 
 
                 <li class="dropdown mega-dropdown">
-                    <ul class="nav navbar-nav main_nav hidden-xs">
+                    <ul class="nav navbar-nav main_nav promo hidden-xs">
                         <li><a class="active" href="#">HOME</a></li>
-                        <li><a href="#">VIJESTI</a></li>
-                        <li><a href="#">Kapital</a></li>
-                        <li><a href="#">Eu</a></li>
-                        <li><a href="#">Najave</a></li>
-                        <li><a href="#">Ličnosti</a></li>
-                        <li><a href="#">Karijera</a></li>
-                        <li><a href="#">Kolumne</a></li>
-                        <li><a href="#">Pauza</a></li>
-                        <li><a href="#">Filantropi</a></li>
+                        <li><a href="#">OBJAVI OGLAS</a></li>
                     </ul>
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bars" aria-hidden="true"></i></a>
 
@@ -326,6 +318,193 @@
     <!-- MAIN BODY -->
     <section class="main_body_contents single_article">
         <div class="container">
+
+            <div class="wrapper-vijesti remargin">
+
+                <div class="col-xs-12">
+                    <select id="selectKategorija" name="drzava-registar">
+                                         <option value="" disabled selected><h1>Kategorije oglasa</h1></option>
+                                        <option>Preporučujemo</option>
+                                        <option>Turizam</option>
+                                        <option>Gastro</option>
+                                        <option>Ljepota i zdravlje</option>
+                                        <option>Tekstil i asesoari</option>
+                                        <option>Enterijer</option>
+                                        <option>Sport/Kultura</option>
+                                        <option>Auto-moto</option>
+                                        <option>Konsalting i usluge</option>
+                                        <option>Finansije i osiguravanje</option>
+                                        <option>Štampa i izdavaštvo</option>
+                                        <option>Tehno kutak</option>
+                                        <option>Poljoprivreda</option>
+                                        <option>Sigurnost i odbrana</option>
+                                        <option>Hemija</option>
+                                        <option>Nekretnine</option>
+                                        <option>Građevina</option>
+                                        <option>Industrija</option>
+                                    </select>
+                    <h1 class="naslov-kolone ">Aktuelno</h1>
+                </div>
+
+                <div class="col-md-8 kolona-aktuelno ">
+                    <div class="col-xs-12 card card-lead card-promo nopadding">
+                        <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic10.jpg">
+                        <div class="card-opis-vijesti">
+                            <p class="card-kategorija">Vijesti / SVIJET</p>
+                            <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                            <p class="card-intro-vijesti">Gojazni đačić s biciklom drži hmelj i finu vatu u džepu nošnje.</p>
+                            <div class="card-count-label grey">
+                                <p>100</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="wrap-ostalih-vijesti remargin">
+                        <div class="col-sm-6 col-md-6 card card-vijest  card-promo">
+                            <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic11.jpg">
+                            <div class="card-opis-vijesti">
+                                <p class="card-kategorija">Vijesti / SVIJET</p>
+                                <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                <div class="card-count-label grey">
+                                    <p>100</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-6 card card-vijest  card-promo">
+                            <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic12.jpg">
+                            <div class="card-opis-vijesti">
+                                <p class="card-kategorija">Vijesti / SVIJET</p>
+                                <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                <div class="card-count-label grey">
+                                    <p>100</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-6 col-md-6 card card-vijest  card-promo">
+                            <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic11.jpg">
+                            <div class="card-opis-vijesti">
+                                <p class="card-kategorija">Vijesti / SVIJET</p>
+                                <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                <div class="card-count-label grey">
+                                    <p>100</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-6 card card-vijest  card-promo">
+                            <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic12.jpg">
+                            <div class="card-opis-vijesti">
+                                <p class="card-kategorija">Vijesti / SVIJET</p>
+                                <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                <div class="card-count-label grey">
+                                    <p>100</p>
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+                <div class="col-md-4 kolona-najcitanije ">
+                    <div class="wrap-najcitanije remargin">
+
+                        <div class="col-xs-12 col-sm-12 col-md-12 card card-promo">
+                            <h2 class="module-label top5"><span>PREPORUČUJEMO <b>TOP 5</b></span></h2>
+                            <div id="exTab3" class="tabs_module registar-vijesti-widget">
+                                <ul class="nav nav-justified nav-pills tabs promo-pills">
+                                    <li class="">
+                                        <a href="#1b" data-toggle="tab" aria-expanded="false">Najnovije</a>
+                                    </li>
+                                    <li class="">
+                                        <a href="#2b" data-toggle="tab" aria-expanded="false">Najčitanije</a>
+                                    </li>
+                                    <li class="active">
+                                        <a href="#3b" data-toggle="tab" aria-expanded="true">Ne propustite</a>
+                                    </li>
+                                </ul>
+                                <div class="tab-content clearfix">
+                                    <div class="tab-pane" id="1b">
+                                        <div class="card-opis-vijesti">
+                                            <li>
+                                                <p class="card-kategorija">Vijesti / SVIJET</p>
+                                                <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                            </li>
+                                            <li>
+                                                <p class="card-kategorija">Vijesti / SVIJET</p>
+                                                <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                            </li>
+                                            <li>
+                                                <p class="card-kategorija">Vijesti / SVIJET</p>
+                                                <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                            </li>
+                                            <li>
+                                                <p class="card-kategorija">Vijesti / SVIJET</p>
+                                                <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                            </li>
+                                            <li>
+                                                <p class="card-kategorija">Vijesti / SVIJET</p>
+                                                <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                            </li>
+                                        </div>
+                                    </div>
+                                    <div class="tab-pane" id="2b">
+                                        <div class="card-opis-vijesti">
+                                            <li>
+                                                <p class="card-kategorija">Najčitanije</p>
+                                                <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                            </li>
+                                            <li>
+                                                <p class="card-kategorija">Najčitanije</p>
+                                                <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                            </li>
+                                            <li>
+                                                <p class="card-kategorija">Najčitanije</p>
+                                                <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                            </li>
+                                            <li>
+                                                <p class="card-kategorija">Najčitanije</p>
+                                                <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                            </li>
+                                            <li>
+                                                <p class="card-kategorija">Najčitanije</p>
+                                                <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                            </li>
+                                        </div>
+                                    </div>
+                                    <div class="tab-pane active" id="3b">
+                                        <div class="card-opis-vijesti">
+                                            <li>
+                                                <p class="card-kategorija">Ne propustite</p>
+                                                <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                            </li>
+                                            <li>
+                                                <p class="card-kategorija">Ne propustite</p>
+                                                <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                            </li>
+                                            <li>
+                                                <p class="card-kategorija">Ne propustite</p>
+                                                <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                            </li>
+                                            <li>
+                                                <p class="card-kategorija">Ne propustite</p>
+                                                <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                            </li>
+                                            <li>
+                                                <p class="card-kategorija">Ne propustite</p>
+                                                <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                            </li>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-12 card ">
+                            <a href="#" class="side-link-button zeleni"><i class="fa fa-android" aria-hidden="true"></i> Akta aplikacija <span class="label-download">DOWNLOAD<span></span></span></a>
+                            <a href="#" class="side-link-button crni"><i class="fa fa-apple" aria-hidden="true"></i> Akta aplikacija <span class="label-download">DOWNLOAD<span></span></span></a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
 
             <div class="wrapper-vijesti remargin">
 
@@ -728,7 +907,7 @@
                             <div class="card-opis-vijesti">
                                 <p class="card-kategorija">Vijesti / SVIJET</p>
                                 <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
-                                <div class="card-count-label">
+                                <div class="card-count-label grey">
                                     <p>100</p>
                                 </div>
                             </div>
@@ -738,7 +917,7 @@
                             <div class="card-opis-vijesti">
                                 <p class="card-kategorija">Vijesti / SVIJET</p>
                                 <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet</h1>
-                                <div class="card-count-label">
+                                <div class="card-count-label grey">
                                     <p>100</p>
                                 </div>
                             </div>
@@ -749,7 +928,7 @@
                             <div class="card-opis-vijesti">
                                 <p class="card-kategorija">Vijesti / SVIJET</p>
                                 <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet</h1>
-                                <div class="card-count-label">
+                                <div class="card-count-label grey">
                                     <p>100</p>
                                 </div>
                             </div>
@@ -759,7 +938,7 @@
                             <div class="card-opis-vijesti">
                                 <p class="card-kategorija">Vijesti / SVIJET</p>
                                 <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
-                                <div class="card-count-label">
+                                <div class="card-count-label grey">
                                     <p>100</p>
                                 </div>
                             </div>
