Adapted widget carousel as news slider.

--- a/promo.html
+++ b/promo.html
@@ -497,6 +497,65 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="col-xs-12 col-sm-12 col-md-12 card card-promo">
+                            <div id="newsSlider1" class="carousel slide" data-ride="carousel">
+                                <!-- Indicators -->
+                                <ol class="carousel-indicators">
+                                    <li data-target="#newsSlider1" data-slide-to="0" class="active"></li>
+                                    <li data-target="#newsSlider1" data-slide-to="1"></li>
+                                    <li data-target="#newsSlider1" data-slide-to="2"></li>
+                                    <li data-target="#newsSlider1" data-slide-to="3"></li>
+                                </ol>
+
+                                <!-- Wrapper for slides -->
+                                <div class="carousel-inner" role="listbox">
+                                    <div class="item active">
+                                        <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic10.jpg">
+                                        <div class="card-opis-vijesti">
+                                            <p class="card-kategorija">Vijesti / SVIJET</p>
+                                            <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                            <div class="card-count-label grey">
+                                                <p>100</p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="item">
+                                        <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic9.jpg">
+                                        <div class="card-opis-vijesti">
+                                            <p class="card-kategorija">Vijesti / SVIJET</p>
+                                            <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                            <div class="card-count-label grey">
+                                                <p>100</p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="item">
+                                        <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic3.jpg">
+                                        <div class="card-opis-vijesti">
+                                            <p class="card-kategorija">Vijesti / SVIJET</p>
+                                            <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                            <div class="card-count-label grey">
+                                                <p>100</p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="item">
+                                        <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic5.jpg">
+                                        <div class="card-opis-vijesti">
+                                            <p class="card-kategorija">Vijesti / SVIJET</p>
+                                            <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                            <div class="card-count-label grey">
+                                                <p>100</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
                         <div class="col-xs-12 col-sm-12 col-md-12 card ">
                             <a href="#" class="side-link-button zeleni"><i class="fa fa-android" aria-hidden="true"></i> Akta aplikacija <span class="label-download">DOWNLOAD<span></span></span></a>
                             <a href="#" class="side-link-button crni"><i class="fa fa-apple" aria-hidden="true"></i> Akta aplikacija <span class="label-download">DOWNLOAD<span></span></span></a>
