Added "objavi oglas" widget

--- a/promo.html
+++ b/promo.html
@@ -391,13 +391,17 @@
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-6 card card-vijest  card-promo">
-                            <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic12.jpg">
-                            <div class="card-opis-vijesti">
-                                <p class="card-kategorija">Vijesti / SVIJET</p>
-                                <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
-                                <div class="card-count-label grey">
-                                    <p>100</p>
+                            <div class="card-opis-vijesti card-objaviteoglas">
+                                <div class="objaviteoglas-bg-layer">
+                                    <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                    <p class="">Objavite Vaš oglas text text<br> tex text text tex...</p>
+                                    <a href="#" class="card-button" id="objavi-oglas-btn">
+                                        <span class="card-button-tekst" style="font-size: x-large;">OBJAVI OGLAS</span></a>
+
                                 </div>
+
+
+
                             </div>
                         </div>
 
