--- a/promo.html
+++ b/promo.html
@@ -347,7 +347,8 @@
                             <div class="red-kategorija">
                                 <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
                                     <div>
-                                        <p class="preporucujemo">Preporučujemo</p>
+                                         <p class="tekstil">Tekstil i asesoari</p>
+                                      <!--  <p class="preporucujemo">Preporučujemo</p> -->
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
@@ -357,24 +358,84 @@
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
                                     <div>
-                                        <p class="hemija">Gastro</p>
+                                        <p class="industrija">Industrija</p>
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
                                     <div>
-                                        <p class="gradevina">Ljepota i zdravlje</p>
+                                        <p class="gradevina">Građevina i nekretnine</p>
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
                                     <div>
-                                        <p class="zdravstvo">Tekstil i asesoari</p>
+                                       <p class="gastro">Gastro</p>
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
                                     <div>
-                                        <p class="poljop">Enterijer</p>
+                                        <p class="finansije">Finansije i osiguranje</p>
                                     </div>
                                 </div>
+                            </div>
+                            <div class="red-kategorija">
+                                <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
+                                    <div>
+                                        <p class="sport">Sport, kultura, umjetnost</p>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
+                                    <div>
+                                        <p class="stamparije">Štamparije i izdavaštvo</p>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
+                                    <div>
+                                        <p class="hemija">Hemijski proizvodi</p>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
+                                    <div>
+                                        <p class="odbrana">Odbrana, sigurnost i javna uprava</p>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
+                                    <div>
+                                        <p class="ljepota">Ljepota i zdravlje</p>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
+                                    <div>
+                                        <p class="it">IT i uredska oprema</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="red-kategorija">
+                                <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
+                                    <div>
+                                         <p class="istrazivanje">Istraživanje i razvoj, poslovne usluge</p>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
+                                    <div>
+                                        <p class="namjestaj">Enterijer</p>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
+                                    <div>
+                                        <p class="poljop">Poljoprivreda</p>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
+                                    <div>
+                                        <p class="ostalo">Sve</p>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
+                                    <div>
+                                       <p class="preporucujemo">Preporučujemo</p>
+                                    </div>
+                                </div>
+                                
                             </div>
                         </div>
                     </div>
