Added new classes for lowering margins on specific h1 elements.

--- a/tenderi-rezultat-pretrage.html
+++ b/tenderi-rezultat-pretrage.html
@@ -319,7 +319,7 @@
     </div>
 
     <!-- MAIN BODY -->
-    <section class="main_body_contents single_article">
+    <section class="main_body_contents single_article rezultat-pretrage">
         <div class="container">
 
             <div class="wrapper-vijesti remargin">
@@ -340,7 +340,7 @@
                 <div class="col-md-12  nopadding">
                     <div class="col-xs-12 col-sm-12 col-md-3 col-lg-4 card ">
                         <div class="card-opis-vijesti">
-                            <h1 class="card-naslov-vijesti">Kategorije za pretragu tendera</h1>
+                            <h1 class="card-naslov-vijesti kategorije-pretrage">Kategorije za pretragu tendera</h1>
                             <div class="nav-side-menu ">
                                 <div class="menu-list akordion">
 
@@ -623,7 +623,7 @@
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-9 col-lg-8 card ">
                         <div class="card-opis-vijesti">
-                            <h1 class="card-naslov-vijesti">Rezultati pretrage</h1>
+                            <h1 class="card-naslov-vijesti rezultat-pretrage">Rezultati pretrage</h1>
                             <div class="form-group nopadding">
 
                                 <div class="col-md-12 nopadding text-right">
