Added reset search button.

--- a/tenderi-rezultat-pretrage.html
+++ b/tenderi-rezultat-pretrage.html
@@ -620,6 +620,10 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="card">
+                            <a href="#" class="card-button grey-btn">
+                                <i class="fa  fa-ban" aria-hidden="true"></i><span class="card-button-tekst">Poništi pretragu</span></a>
+                        </div>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-9 col-lg-8 card ">
                         <div class="card-opis-vijesti">
