Made toggleable dropdown indicators for promo categories.

--- a/promo.html
+++ b/promo.html
@@ -322,33 +322,104 @@
             <div class="wrapper-vijesti remargin">
 
                 <div class="col-xs-12">
-                    <div class="btn-group promo">
-
-                        <!--
-                                        
-                                        <option>Sport/Kultura</option>
-                                        <option>Auto-moto</option>
-                                        <option>Konsalting i usluge</option>
-                                        <option>Finansije i osiguravanje</option>
-                                        <option>Štampa i izdavaštvo</option>
-                                        <option>Tehno kutak</option>
-                                        <option>Poljoprivreda</option>
-                                        <option>Sigurnost i odbrana</option>
-                                        <option>Hemija</option>
-                                        <option>Nekretnine</option>
-                                        <option>Građevina</option>
-                                        <option>Industrija</option>
-                                    </select> -->
-
+                    <div class="btn-group promo promo-toolbar">
                         <button type="button" class="btn btn-default dropdown-toggle promo-kategorije" data-toggle="dropdown">
         <h1>Kategorije oglasa</h1>
       </button>
+                        <div class="col-xs-12 red-kategorija toggleable">
+                            <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
+                                <div>
+                                    <p class="tekstil">Tekstil i asesoari</p>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
+                                <div>
+                                    <p class="turizam">Turizam</p>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
+                                <div>
+                                    <p class="industrija">Industrija</p>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
+                                <div>
+                                    <p class="gradevina">Građevina i nekretnine</p>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
+                                <div>
+                                    <p class="gastro">Gastro</p>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
+                                <div>
+                                    <p class="finansije">Finansije i osiguranje</p>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
+                                <div>
+                                    <p class="sport">Sport, kultura, umjetnost</p>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
+                                <div>
+                                    <p class="stamparije">Štamparije i izdavaštvo</p>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
+                                <div>
+                                    <p class="hemija">Hemijski proizvodi</p>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
+                                <div>
+                                    <p class="odbrana">Odbrana, sigurnost i javna uprava</p>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
+                                <div>
+                                    <p class="ljepota">Ljepota i zdravlje</p>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
+                                <div>
+                                    <p class="it">IT i uredska oprema</p>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
+                                <div>
+                                    <p class="istrazivanje">Istraživanje i razvoj, poslovne usluge</p>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
+                                <div>
+                                    <p class="namjestaj">Enterijer</p>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
+                                <div>
+                                    <p class="poljop">Poljoprivreda</p>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
+                                <div>
+                                    <p class="ostalo">Sve</p>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
+                                <div>
+                                    <p class="preporucujemo">Preporučujemo</p>
+                                </div>
+                            </div>
+
+
+                        </div>
                         <div class="dropdown-menu promo" role="menu">
                             <div class="red-kategorija">
                                 <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
                                     <div>
-                                         <p class="tekstil">Tekstil i asesoari</p>
-                                      <!--  <p class="preporucujemo">Preporučujemo</p> -->
+                                        <p class="tekstil">Tekstil i asesoari</p>
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
@@ -368,7 +439,7 @@
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
                                     <div>
-                                       <p class="gastro">Gastro</p>
+                                        <p class="gastro">Gastro</p>
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
@@ -412,7 +483,7 @@
                             <div class="red-kategorija">
                                 <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
                                     <div>
-                                         <p class="istrazivanje">Istraživanje i razvoj, poslovne usluge</p>
+                                        <p class="istrazivanje">Istraživanje i razvoj, poslovne usluge</p>
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
@@ -432,10 +503,10 @@
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-2 kategorija-oglasa">
                                     <div>
-                                       <p class="preporucujemo">Preporučujemo</p>
+                                        <p class="preporucujemo">Preporučujemo</p>
                                     </div>
                                 </div>
-                                
+
                             </div>
                         </div>
                     </div>
